make changes so that we can reference objects in S3

--- a/podcats/templates/episode.xml
+++ b/podcats/templates/episode.xml
@@ -3,6 +3,11 @@
     <enclosure url={{ url }} type="{{ mimetype }}" length="{{ length }}" />
     <guid>{{ guid }}</guid>
     <pubDate>{{ date }}</pubDate>
+    {% if description and speaker %}
+        <description>{{ description }} Speaker: {{ speaker }}.</description>
+    {% elif description %}
+        <description>{{ description }}</description>
+    {% endif %}
     {% if image_url %}
         <itunes:image href="{{ image_url }}"/>
     {% endif %}
